style.css
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}

/* ^^^^ remove browser default styles ^^^^ */

html, body {
	display: flex;
	justify-content: center;
	align-items: center;
	height: 100%;
	width: 100%;
}
.container {
	display: grid;
	grid-template-columns: minmax(0, 1fr) 2fr;
	grid-template-rows: auto;
	height: 60%;
	width: 80%;
	max-width: 1200px;
	min-width: 960px;
	margin: auto;
}
.bones {
	background-color: #ccc;
	border: 1px solid #000;
}

.form {
	display:grid;
	grid-template-rows: 1fr 1fr 1fr;
	grid-column: 2 / 3;
	min-width: 800px;
}

.sidebar {
	width: 100%;
	height: 100%;
	overflow: hidden;
}

.sidebar img {
	width: auto;
	height: 100%;
	object-fit: cover;
}

.fields {
	display: grid;
	grid-template-columns: repeat(3, 1fr);
	grid-template-rows: repeat(4, 1fr);
}

.fields .header {
	grid-column: 1;
	grid-row: 1;
}

.columnOne {
	grid-column: 1;
}

.columnTwo {
	grid-column: 2;
}

input {
	width: 200px;
	height: 25px;
}

label {
	margin: 0;
	padding: 0;
	border: 0;
}

.firstName .lastName .email {
	grid-row: 3;
}

